feat: update slider

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,10 @@ h1 {
   font-family: Staatliches;
   font-size: 120px;
 }
-
+.title-with-bg {
+  background: rgba(0, 0, 0, .2);
+  padding: 10px;
+}
 #category {
   font-family: Staatliches;
   font-weight: 500;
@@ -39,7 +42,7 @@ h1 {
 
 #banner {
   margin: 20px;
-  height: 800px;
+  max-height: 400px;
 }
 
 #editor {
