--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,3 +65,27 @@ img:hover {
   transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
+/* tooltip style */
+#tooltip {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, .8);
+  color: #fff;
+  padding: 4px 10px;
+  border-radius: 3px;
+}
+#tooltip:after {
+  display: block;
+  position: absolute;
+  content: '';
+  bottom: -6px;
+  left: 50%;
+  margin-left: -6px;
+  width: 0; 
+  height: 0; 
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid rgba(0, 0, 0, .8);
+}
